--- a/project/public/index.html
+++ b/project/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Minigamer is a small collection of competitive single-player games."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <!--
